kube/applications/flaresolverr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  namespace: media
  annotations:
    ignore-check.kube-linter.io/latest-tag: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/no-read-only-root-fs: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/run-as-non-root: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/unset-memory-requirements: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/unset-cpu-requirements: >-
      FIXME: fix this one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaresolverr
  template:
    metadata:
      labels:
        app: flaresolverr
    spec:
      containers:
        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:latest
          ports:
            - containerPort: 8191
