kube/applications/flaresolverr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaresolverr
spec:
  rules:
    - host: flaresolverr.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flaresolverr
                port:
                  number: 8191
  tls:
    - hosts:
        - flaresolverr.${DOMAIN}
      secretName: wildcard-cert
